network/cilium/hubble-ingress-route/hubble-allow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-allow-lan
spec:
  podSelector:
    matchLabels:
      k8s-app: hubble-ui
  ingress:
  - ports:
      - port: 8081
